--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 
 <body>
     <button id="showImageBtn"
-        onclick="window.location.href='https://www.jmu.edu.cn/__local/B/E1/F8/76002F4B5092DF01953C44BE142_AE54560A_B21DB.jpg'">建筑寻找推荐按</button>
+        onclick="window.location.href='https://www.jmu.edu.cn/__local/B/E1/F8/76002F4B5092DF01953C44BE142_AE54560A_B21DB.jpg'">二维俯视图</button>
     <!-- 创建地图容器 -->
     <div id="container"></div>
-    <div class="info">点击地图显示图像（新页面打算实现内容</div>
+    <div class="info">使用说明：地图蓝色标记点将鼠标放置后可以显示地点名称。路线规划功能需点击您所在位置后，在点击目的地（目的地也必须是标记点）</div>
     <div id="imageDiv"></div>
     <script>
         //创建地图对象
         var map = new AMap.Map('container', {
             center: [118.092315, 24.577955],
-            zoom: 17,
+            zoom: 15,//feiqi
             viewMode: '3D',
             pitch: 45,
         });
@@ -64,6 +64,126 @@
             title: '小铁门'
         });
 
+        var 海外GateMarker = new AMap.Marker({
+            position: [118.096762, 24.579093],
+            map: map,
+            title: '海外学院'
+        });
+
+        var 港工GateMarker = new AMap.Marker({
+            position: [118.095721, 24.578157],
+            map: map,
+            title: '港工'
+        });
+
+        var 工商GateMarker = new AMap.Marker({
+            position: [118.095518, 24.576591],
+            map: map,
+            title: '工商'
+        });
+
+        var 师范GateMarker = new AMap.Marker({
+            position: [118.093334, 24.576864],
+            map: map,
+            title: '师范'
+        });
+
+        var 计算机GateMarker = new AMap.Marker({
+            position: [118.092235, 24.576381],
+            map: map,
+            title: '计算机'
+        });
+
+        var 理学院GateMarker = new AMap.Marker({
+            position: [118.091961, 24.57702],
+            map: map,
+            title: '理学院'
+        });
+
+        var 外国语GateMarker = new AMap.Marker({
+            position: [118.093361, 24.578576],
+            map: map,
+            title: '外国语'
+        });
+
+        var 嘉庚图书馆GateMarker = new AMap.Marker({
+            position: [118.095196, 24.580206],
+            map: map,
+            title: '嘉庚图书馆'
+        });
+
+        var 延奎图书馆GateMarker = new AMap.Marker({
+            position: [118.092487, 24.577908],
+            map: map,
+            title: '延奎图书馆'
+        });
+
+        var 信息GateMarker = new AMap.Marker({
+            position: [118.093259, 24.580435],
+            map: map,
+            title: '信息'
+        });
+
+        海外GateMarker.on('click', function (e) {
+            infoWindow.setContent('海外学院');
+            infoWindow.open(map, 海外GateMarker.getPosition());
+            calculateRoute(海外GateMarker.getPosition());
+        });
+
+        港工GateMarker.on('click', function (e) {
+            infoWindow.setContent('港工');
+            infoWindow.open(map, 港工GateMarker.getPosition());
+            calculateRoute(港工GateMarker.getPosition());
+        });
+
+        工商GateMarker.on('click', function (e) {
+            infoWindow.setContent('工商');
+            infoWindow.open(map, 工商GateMarker.getPosition());
+            calculateRoute(工商GateMarker.getPosition());
+        });
+
+        师范GateMarker.on('click', function (e) {
+            infoWindow.setContent('师范');
+            infoWindow.open(map, 师范GateMarker.getPosition());
+            calculateRoute(师范GateMarker.getPosition());
+        });
+
+        计算机GateMarker.on('click', function (e) {
+            infoWindow.setContent('计算机');
+            infoWindow.open(map, 计算机GateMarker.getPosition());
+            calculateRoute(计算机GateMarker.getPosition());
+        });
+
+        理学院GateMarker.on('click', function (e) {
+            infoWindow.setContent('理学院');
+            infoWindow.open(map, 理学院GateMarker.getPosition());
+            calculateRoute(理学院GateMarker.getPosition());
+        });
+
+        外国语GateMarker.on('click', function (e) {
+            infoWindow.setContent('外国语');
+            infoWindow.open(map, 外国语GateMarker.getPosition());
+            calculateRoute(外国语GateMarker.getPosition());
+        });
+
+        嘉庚图书馆GateMarker.on('click', function (e) {
+            infoWindow.setContent('嘉庚图书馆');
+            infoWindow.open(map, 嘉庚图书馆GateMarker.getPosition());
+            calculateRoute(嘉庚图书馆GateMarker.getPosition());
+        });
+
+        延奎图书馆GateMarker.on('click', function (e) {
+            infoWindow.setContent('延奎图书馆');
+            infoWindow.open(map, 延奎图书馆GateMarker.getPosition());
+            calculateRoute(延奎图书馆GateMarker.getPosition());
+        });
+
+        信息GateMarker.on('click', function (e) {
+            infoWindow.setContent('信息');
+            infoWindow.open(map, 信息GateMarker.getPosition());
+            calculateRoute(信息GateMarker.getPosition());
+        });
+
         // 创建信息窗体
         var infoWindow = new AMap.InfoWindow();
 
@@ -71,45 +191,77 @@
         southGateMarker.on('click', function (e) {
             infoWindow.setContent('南门');
             infoWindow.open(map, southGateMarker.getPosition());
+            calculateRoute(southGateMarker.getPosition());
         });
 
         eastGateMarker.on('click', function (e) {
             infoWindow.setContent('东门');
             infoWindow.open(map, eastGateMarker.getPosition());
+            calculateRoute(eastGateMarker.getPosition());
         });
 
         gymGateMarker.on('click', function (e) {
             infoWindow.setContent('体院门');
             infoWindow.open(map, gymGateMarker.getPosition());
+            calculateRoute(gymGateMarker.getPosition());
         });
 
         smallGateMarker.on('click', function (e) {
             infoWindow.setContent('小铁门');
             infoWindow.open(map, smallGateMarker.getPosition());
+            calculateRoute(smallGateMarker.getPosition());
         });
 
-        // 添加地图点击事件监听器
-        map.on('click', function (e) {
-            // 获取点击位置的经纬度坐标
-            var lnglat = e.lnglat;
-
-            // 在点击位置附近添加一个标记，并打开信息窗体
-            var nearbyMarker = new AMap.Marker({
-                position: lnglat,
-                map: map
+        // Use AMap.Geolocation to get the user's current location
+        AMap.plugin('AMap.Geolocation', function () {
+            var geolocation = new AMap.Geolocation({
+                enableHighAccuracy: true, // enable high accuracy positioning
+                timeout: 10000, // set timeout value
+                buttonPosition: 'RB', // locate button position
+                buttonOffset: new AMap.Pixel(10, 20), // locate button offset
+                zoomToAccuracy: true, // zoom map to accuracy circle
             });
-            infoWindow.setContent('点击的位置');
-            infoWindow.open(map, nearbyMarker.getPosition());
+
+            map.addControl(geolocation);
+
+            geolocation.getCurrentPosition(function (status, result) {
+                if (status === 'complete') {
+                    // Add a marker for the user's location
+                    var userLocationMarker = new AMap.Marker({
+                        position: result.position,
+                        map: map,
+                        title: '您的位置'
+                    });
+                } else {
+                    console.error('Failed to get user location', result);
+                }
+            });
         });
 
-        function showImage() {
-            var imageDiv = document.getElementById('imageDiv');
-            var image = document.createElement('img');
-            image.src = 'https://www.jmu.edu.cn/__local/0/34/55/6E22D8C1D175F990BC27CFBDD51_FD23FC5D_AE2BA.jpg';
-            image.alt = '二维图像';
-            imageDiv.appendChild(image);
-            document.getElementById('showImageBtn').style.display = 'none';
+        // Calculate and display the walking route from the user's location to the clicked point
+        var walking;
+        function calculateRoute(destination) {
+            if (walking) {
+                walking.clear();
+            }
+
+            AMap.plugin('AMap.Walking', function () {
+                walking = new AMap.Walking({
+                    map: map,
+                    panel: 'routePanel',
+                    panToLocation: false,
+                });
+
+                walking.search(map.getCenter(), destination, function (status, result) {
+                    if (status === 'complete') {
+                        console.log('Walking route displayed successfully');
+                    } else {
+                        console.error('Failed to display walking route', result);
+                    }
+                });
+            });
         }
+
         AMap.plugin(
             ['AMap.ToolBar', 'AMap.Scale', 'AMap.ControlBar'],
             function () {
@@ -118,8 +270,24 @@
                 map.addControl(new AMap.ControlBar())
             }
         )
-    </script>
 
+        // Enable dragging of the map when the middle mouse button is pressed
+        map.on('mousedown', function (e) {
+            if (e.button === 1) {
+                map.setDefaultCursor('grabbing');
+                map.setStatus({ dragEnable: true });
+            }
+        });
+
+        // Disable dragging of the map when the middle mouse button is released
+        map.on('mouseup', function (e) {
+            if (e.button === 1) {
+                map.setDefaultCursor('grab');
+                map.setStatus({ dragEnable: false });
+            }
+        });
+    </script>
+    <div id="routePanel"></div>
 </body>
 
 </html>
